--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,19 @@
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 	<uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
 
+	<uses-feature
+		android:name="android.software.leanback"
+		android:required="false" />
+
+	<uses-feature
+		android:name="android.hardware.touchscreen"
+		android:required="false" />
+
 	<application
 		android:name="org.koitharu.kotatsu.KotatsuApp"
 		android:allowBackup="true"
 		android:backupAgent="org.koitharu.kotatsu.settings.backup.AppBackupAgent"
+		android:banner="@mipmap/ic_banner"
 		android:dataExtractionRules="@xml/backup_rules"
 		android:fullBackupContent="@xml/backup_content"
 		android:fullBackupOnly="true"
@@ -31,12 +40,15 @@
 			android:exported="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
+
 				<category android:name="android.intent.category.LAUNCHER" />
+				<category android:name="android.intent.category.LEANBACK_LAUNCHER" />
 			</intent-filter>
 			<meta-data
 				android:name="android.app.default_searchable"
 				android:value="org.koitharu.kotatsu.ui.search.SearchActivity" />
 		</activity>
+
 		<activity
 			android:name="org.koitharu.kotatsu.details.ui.DetailsActivity"
 			android:exported="true">
@@ -63,8 +75,10 @@
 			android:label="@string/settings">
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
+
 				<category android:name="android.intent.category.DEFAULT" />
 				<category android:name="android.intent.category.BROWSABLE" />
+
 				<data android:scheme="kotatsu" />
 			</intent-filter>
 		</activity>
